crates/hydracache/tests/cacheable/fail_conflicting_ttl.stderr
error: cacheable accepts only one TTL option: ttl or ttl_secs
  --> tests/cacheable/fail_conflicting_ttl.rs:5:19
   |
 5 |       let _future = cacheable!(
   |  ___________________^
 6 | |         cache = cache,
 7 | |         key = "value:1",
 8 | |         ttl = std::time::Duration::from_secs(60),
 9 | |         ttl_secs = 60,
10 | |         load = || async { Ok::<_, std::io::Error>(1_u64) },
11 | |     );
   | |_____^
   |
   = note: this error originates in the macro `cacheable` (in Nightly builds, run with -Z macro-backtrace for more info)
